# modern-cpp-template

./: CMakeLists.txt  LICENSE  README
catch2/: CMakeLists.txt
factorial/: CMakeLists.txt
factorial/include/factorial/: factorial
factorial/src/: factorial.cpp
factorial/tests/: factorial.cpp
src/: CMakeLists.txt  main.cpp
